Wed Jul  2 19:06:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/cgi.rb (CGI::QueryExtension.read_multipart): blanks inside
	  double quotes are allowed.  [ruby-list:45140]

Wed Jul  2 19:03:37 2008  Tanaka Akira  <akr@fsij.org>

	* numeric.c (num_coerce): call rb_Float(x) first.  don't depend on
	  evaluation order of function arguments.

Wed Jul  2 18:57:19 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/syslog/syslog.c (syslog_write): syslog operations should be
	  protected from $SAFE level 4.  a patch from Keita Yamaguchi
	  <keita.yamaguchi at gmail.com>.

	* ext/syslog/syslog.c (mSyslog_close): ditto.

	* ext/syslog/syslog.c (mSyslog_set_mask): ditto.

Wed Jul  2 18:26:20 2008  Tanaka Akira  <akr@fsij.org>

	* math.c (domain_check): fix preprocess condition.

Wed Jul  2 18:22:52 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tmpdir.rb (@@systmpdir): prior LOCAL_APPDATA if possible, and
	  should be clean.  based on a patch from arton <artonx AT
	  yahoo.co.jp> at [ruby-dev:35269]

Wed Jul  2 18:16:19 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (date2time_str): fix the overflow in
	  some situation. [ruby-bugs-20793]

Tue Jul  1 15:11:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_fill): check if beg is too big.

Mon Jun 30 20:35:32 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_buf_cat): check for self concatenation.

Sun Jun 29 21:39:54 2008  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_obj_respond_to): use RTEST to test the result of
	  respond_to? method.

Sun Jun 29 21:20:17 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* array.c (rb_ary_fill): (compatibility) do not raise
	  ArgumentError on negative length.  This behaviour shall change
	  in a future release.

Sun Jun 29 20:08:11 2008  Tanaka Akira  <akr@fsij.org>

	* time.c (time_timeval): fix rounding negative float.

Sun Jun 29 19:19:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
