@@ -71,7 +71,6 @@ module Singleton
     raise TypeError, "can't dup instance of singleton #{self.class}"
   end
 
-  private
   #  default marshalling strategy
   def _dump(depth=-1)
     ''
